fix scaling on mobile

--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -14,6 +14,13 @@
     gap: 24px;
 }
 
+@media (max-width: 816px) {
+    .contact-form {
+        scale: 80%;
+    }
+
+}
+
 .contact-form-name {
     background-color: var(--item-color);
     border: 1px solid var(--border-color);
