--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -18,3 +18,10 @@
     font-size: 1.5rem;
     line-height: 2rem;
 }
+
+@media (max-width: 816px) {
+    .profile-description  {
+        scale: 80%;
+    }
+
+}
